--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,12 @@ body {
   margin: 0;
   min-height: 100%;
 }
+button {
+  border-radius: 10px;
+}
+ul {
+  list-style: none;
+}
+.justified-center {
+  text-align: center;
+}
